# k-crdt

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  svelte.config.js
client/: package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  uno.config.ts  windi.config.ts
client/src/: app.css  app.html
client/src/backend/: db.ts  sync.ts  wasm.ts
client/src/components/: DarkModeSwitch.svelte  DesktopSidebar.svelte  Hamburger.svelte  Icon.svelte  IconInner.svelte  LogoFull.svelte  MobileSidebar.svelte  Navbar.svelte  Sidebar.svelte  SidebarContent.svelte  UserMenu.svelte  UserMenuButton.svelte  g-button.svelte
rust_src/: build.rs  engine.rs  lwwregister.rs  time.rs  uid.rs
rust_src/time/: hlc.rs  timestamp.rs
server/: build.js  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
server/worker/: engine_bg.mjs  engine_bg.mjs.d.ts  engine_bg.wasm  export_wasm.mjs  index.mjs  index.mjs.ts  messages.mjs  messages.mjs.ts  sync_agent.mjs  sync_agent.mjs.ts
src/: client.rs  engine.rs  gcounter.rs  lib.rs  lwwregister.rs  main.rs  pncounter.rs  serialization.rs  server.rs  service-worker.ts  steps.rs  sw.ts  time.rs  uid.rs  vclock.rs
src/backend/: db.ts  sync.ts  wasm.ts
src/models/: nodedb.ts
src/routes/: __layout.svelte  index.svelte
src/service-worker/: db.ts  event-handlers.ts  event-listeners.ts  models.ts  sw.ts  sync.ts  wasm.ts
src/stores/: engine.ts  general.ts
src/time/: client.rs  clock.rs  hlc.rs  server.rs  timestamp.rs
static/: manifest.json
tests/: integration_test.rs  wasm.rs
types/: messages.ts
(+25 files in other folders)
