[package]
name = "crdts"
version = "0.1.0"
edition = "2018"
description = "Local-first data management application."
repository = "https://github.com/SergioCKS/k-crdt.git"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.28"
console_error_panic_hook = { version = "0.1.6", optional = true }
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
humantime = "2.0"
js-sys = "0.3.55"
bincode = "1.3.3"
web-sys = { version = "0.3.55", features = ["WorkerGlobalScope", "Performance"] }
anyhow = "1"

[profile.release]
opt-level = "s" # Tell `rustc` to optimize for small code size.
